# fo-scanner

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCURACY_IMPROVEMENTS_IMPLEMENTED.md  ACCURACY_TRACKING.md  AGENTS.md  ARCHITECTURE.md  BACKTESTING_IMPLEMENTATION_SUMMARY.md  BACKTESTING_QUICKSTART.txt  BACKTEST_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  FRAMEWORK_GUIDE.md  HOW_TO_RUN.txt  HOW_TO_RUN_BACKTESTING.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MODEL_INFO.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PROJECT_IMPROVEMENTS.md  QUICKSTART.md  README.md  README2.md  README_BACKTESTING.md  SCORING_RESEARCH.md  SECURITY.md  TECHNICAL_SCORE_IMPLEMENTATION_EXAMPLES.md  TECHNICAL_SCORE_IMPROVEMENTS.md  TECHNICAL_SCORE_SUMMARY.md  TECHNICAL_SIGNAL_ACCURACY_TESTING.md  TECHNICAL_SIGNAL_IMPROVEMENTS.md  UNIFIED_EVALUATION.md  UNIFIED_MARKET_EVALUATION_GUIDE.md  UPDATE_SUMMARY.md  ai.openclaw.gateway.plist  backfill_db.py  (+25 more)
backend/: UNIFIED_IMPROVEMENTS.md  accuracy_tracker.py  analytics.py  backtest.py  backtest_pipeline.py  backtest_runner.py  cache.py  constants.py  data_source.py  db.py  earnings.py  fo_trades.py  historical_loader.py  main.py  market_external.py  ml_model.py  nn_model.py  paper_trades.db  requirements.txt  scheduler.py  scoring_technical.py  signals.py  signals_legacy.py  slugs.json  suggestions.py  technical_backtest.py  test_api.py  trades.db  unified_evaluation.py
btst/: README.md  __init__.py  data_collector.py  feature_engineering.py  main.py  model_architecture.py  (+1 more)
(+74 files in other folders)
