[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["backend"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0703",  # broad-except
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "c", "e"]

[project]
name = "fo-scanner"
version = "4.0.0"
description = "NSE F&O Options Scanner with live signals and paper trading"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["nse", "options", "trading", "scanner", "f&o"]

[project.urls]
Homepage = "https://github.com/shahzebkhan-os/fo-scanner"
Repository = "https://github.com/shahzebkhan-os/fo-scanner"
